--- a/projects/charmng-calendar/src/lib/calendar/calendar.component.html
+++ b/projects/charmng-calendar/src/lib/calendar/calendar.component.html
@@ -1,1 +1,11 @@
-asd
+<div class="calendar-container">
+  <div class="calendar-header"></div>
+
+  <div class="calendar-body">
+    @for(day of daysOfWeek; track $index) {
+    <div class="calendar-col-title">{{ day }}</div>
+    } @for(day of calendarDays; track $index) {
+    <lib-calendar-day [calendarDay]="day"></lib-calendar-day>
+    }
+  </div>
+</div>
