feat: added month changing

--- a/projects/charmng-calendar/src/lib/calendar/calendar-day/calendar-day.component.html
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-day/calendar-day.component.html
@@ -5,7 +5,12 @@
   }"
 >
   <div class="container">
-    <div class="day-number">
+    <div
+      class="day-number"
+      [ngClass]="{
+        today: calendarDay.isToday
+      }"
+    >
       {{ calendarDay.date.getDate() }}
     </div>
   </div>
