--- a/projects/app/src/styles.scss
+++ b/projects/app/src/styles.scss
@@ -7,3 +7,16 @@ body {
   margin: 0 auto;
   font-family: sans-serif;
 }
+:root {
+  --red: #e47373;
+  --blue: #738ae4;
+  --orange: #e49773;
+  --green: #5bb364;
+  --purple: #ab73e4;
+
+  --red-faded: #fffafa;
+  --blue-faded: #f2f5ff;
+  --orange-faded: #fff6f2;
+  --green-faded: #f6fff7;
+  --purple-faded: #faf6ff;
+}
