--- a/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
@@ -10,16 +10,25 @@
   padding: 0.5rem;
   border-bottom: #dfdfdf 1px solid;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
 }
 .calendar-body {
-  display: grid;
-  grid-gap: 1px;
-  grid-template-columns: repeat(7, 1fr);
+  &.month-view {
+    display: grid;
+    grid-gap: 1px;
+    grid-template-columns: repeat(7, 1fr);
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
 
-  overflow-y: hidden;
-  overflow-x: auto;
+  &.day-view {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    max-height: 50rem;
+    overflow-y: auto;
+  }
 }
 .calendar-col-title {
   padding: 0.8rem;
