--- a/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.html
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.html
@@ -1,11 +1,30 @@
 <div class="container">
-  <div class="allday-container">
-    @for(event of events; track $index) { @if(event.allDay) {
-    <div class="event-allday" [ngClass]="event.color ?? ''">
-      <span class="event-name">{{ event.name }}</span>
-      <span class="event-name hidden">{{ event.name }}</span>
+  <div class="event-container">
+    <div class="regular-event-container">
+      @for(event of events; track $index) { @if(!event.allDay) {
+      <div
+        class="event"
+        [ngClass]="event.color ?? ''"
+        [style]="
+          'top: ' +
+          calculateStartPercentage(event.startDate) +
+          '%; height: ' +
+          calculateHeightPercentage(event.startDate, event.endDate!) +
+          '%;'
+        "
+      >
+        <span class="event-name">{{ event.name }}</span>
+      </div>
+      } }
     </div>
-    } }
+    <div class="allday-container">
+      @for(event of events; track $index) { @if(event.allDay) {
+      <div class="event-allday" [ngClass]="event.color ?? ''">
+        <span class="event-name fixed">{{ event.name }}</span>
+        <span class="event-name hidden">{{ event.name }}</span>
+      </div>
+      } }
+    </div>
   </div>
   @for(hour of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17,
   18, 19, 20, 21, 22, 23]; track hour) {
