--- a/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.scss
@@ -1,11 +1,15 @@
 .container {
   position: relative;
 }
-.allday-container {
+.event-container {
   position: absolute;
-  right: 1rem;
-  top: 1rem;
-  bottom: 1rem;
+  width: 100%;
+  bottom: 0;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+}
+.allday-container {
   display: flex;
   gap: 1rem;
 }
@@ -44,8 +48,54 @@
   }
 }
 
+.regular-event-container {
+  margin: 0rem 1rem 0rem 10rem;
+  flex: 1;
+  position: relative;
+
+  & > .event {
+    position: absolute;
+    width: 100%;
+    opacity: 0.7;
+
+    border-left: rgb(142, 142, 142) 2px solid;
+    color: rgb(134, 134, 134);
+    background-color: rgb(245, 245, 245);
+
+    padding: 0.4rem 0 0 0.4rem;
+
+    &.red {
+      border-left: var(--red) 2px solid;
+      color: var(--red);
+      background-color: var(--red-faded);
+    }
+    &.blue {
+      border-left: var(--blue) 2px solid;
+      color: var(--blue);
+      background-color: var(--blue-faded);
+    }
+    &.green {
+      border-left: var(--green) 2px solid;
+      color: var(--green);
+      background-color: var(--green-faded);
+    }
+    &.orange {
+      border-left: var(--orange) 2px solid;
+      color: var(--orange);
+      background-color: var(--orange-faded);
+    }
+    &.purple {
+      border-left: var(--purple) 2px solid;
+      color: var(--purple);
+      background-color: var(--purple-faded);
+    }
+  }
+}
+
 .event-name {
-  position: fixed;
+  &.fixed {
+    position: fixed;
+  }
 
   &.hidden {
     position: static;
