feat: added selecting day date and switching to day view from month view

--- a/projects/charmng-calendar/src/lib/calendar/calendar-day/calendar-day.component.html
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-day/calendar-day.component.html
@@ -3,6 +3,7 @@
   [ngClass]="{
     inactive: !calendarDay.active
   }"
+  (click)="dayClicked.emit(calendarDay.date)"
 >
   <div class="container">
     <div
