--- a/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-day-view/calendar-day-view.component.scss
@@ -12,6 +12,10 @@
 .allday-container {
   display: flex;
   gap: 1rem;
+
+  &.child {
+    gap: 0.1rem;
+  }
 }
 .event-allday {
   padding: 0.5rem;
@@ -20,6 +24,10 @@
   color: rgb(134, 134, 134);
   background-color: rgb(245, 245, 245);
   position: relative;
+
+  &.child {
+    max-width: 0.1rem;
+  }
 
   &.red {
     border-left: var(--red) 2px solid;
@@ -52,6 +60,10 @@
   margin: 0rem 1rem 0rem 10rem;
   flex: 1;
   position: relative;
+
+  &.child {
+    margin: 0rem 0.1rem 0rem 0.1rem;
+  }
 
   & > .event {
     position: absolute;
