--- a/projects/charmng-calendar/src/lib/calendar/calendar-hour/calendar-hour.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-hour/calendar-hour.component.scss
@@ -1,6 +1,7 @@
 .calendar-hour {
   padding: 0.5rem 2rem 2rem 2rem;
   height: 4rem;
+  min-width: 10rem;
   color: #888888;
   border-bottom: #dfdfdf 1px solid;
   box-sizing: border-box;
