feat: added next and previous day button functionality

--- a/projects/charmng-calendar/src/lib/calendar/calendar-week-view/calendar-week-view.component.html
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-week-view/calendar-week-view.component.html
@@ -1,4 +1,4 @@
-<div class="week-container">
+<div class="week-container header">
   <div style="height: 4rem; min-width: 3rem"></div>
   @for(day of days; track $index) {
 
