--- a/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
@@ -33,6 +33,7 @@
     flex-direction: column;
     max-height: 50rem;
     overflow-y: auto;
+    position: relative;
   }
 }
 .calendar-col-title {
