--- a/projects/charmng-calendar/src/lib/calendar/calendar-week-view/calendar-week-view.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar-week-view/calendar-week-view.component.scss
@@ -2,6 +2,11 @@
   display: flex;
   width: 100%;
   gap: 1px;
+
+  &.header {
+    border-bottom: #d9d9d9 1px solid;
+    background-color: #fff;
+  }
 }
 
 .day {
