--- a/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
+++ b/projects/charmng-calendar/src/lib/calendar/calendar.component.scss
@@ -3,6 +3,8 @@
   border-radius: 0.3rem;
   background-color: #fff;
   overflow: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .calendar-header {
@@ -18,8 +20,8 @@
     display: grid;
     grid-gap: 1px;
     grid-template-columns: repeat(7, 1fr);
-    overflow-y: hidden;
     overflow-x: auto;
+    overflow-y: hidden;
   }
 
   &.day-view {
@@ -64,4 +66,12 @@
   display: flex;
   align-items: center;
   gap: 0.4rem;
+}
+
+@media (max-width: 650px) {
+  .calendar-header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
